--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ed7b7c">  <td>23/08/01 20:44:03</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;TestNGBeforeAfter.afterTest()[pri:0, instance:Tests.TestHerokuApp@4310d43]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1807648168</td>   <td></td> </tr>
-<tr bgcolor="b687be">  <td>23/08/01 20:43:58</td>   <td>-5717</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestHerokuApp.testHerokuApp2()[pri:0, instance:Tests.TestHerokuApp@4310d43]">testHerokuApp2</td> 
-  <td>main@1807648168</td>   <td></td> </tr>
-<tr bgcolor="ed7b7c">  <td>23/08/01 20:43:56</td>   <td>-7679</td> <td>&nbsp;</td><td title="&gt;&gt;TestNGBeforeAfter.beforeTest(java.lang.String,java.lang.String)[pri:0, instance:Tests.TestHerokuApp@4310d43]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1807648168</td>   <td></td> </tr>
+<tr bgcolor="8aa092">  <td>23/08/01 20:57:02</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;TestNGBeforeAfter.afterTest()[pri:0, instance:Tests.TestHerokuApp@6340e5f0]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@406765571</td>   <td></td> </tr>
+<tr bgcolor="8aa092">  <td>23/08/01 20:56:54</td>   <td>-8263</td> <td>&nbsp;</td><td title="&gt;&gt;TestNGBeforeAfter.beforeTest(java.lang.String,java.lang.String)[pri:0, instance:Tests.TestHerokuApp@6340e5f0]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@406765571</td>   <td></td> </tr>
+<tr bgcolor="eee7ff">  <td>23/08/01 20:56:56</td>   <td>-6125</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestHerokuApp.testHerokuApp2()[pri:0, instance:Tests.TestHerokuApp@6340e5f0]">testHerokuApp2</td> 
+  <td>main@406765571</td>   <td></td> </tr>
 </table>
